--- a/src/sass/_options.scss
+++ b/src/sass/_options.scss
@@ -177,7 +177,7 @@
 .diaria {
 	width: 24px;
 	height: 16px;
-	background: url(../../icons/diarias.png);
+	background: url(../images/icons/diarias.png);
 	display: inline-block;
     margin-left: -4px;
 }
@@ -185,7 +185,7 @@
 .pessoa {
 	width: 10px;
 	height: 21px;
-	background: url(../../icons/pessoas.png);
+	background: url(../images/icons/pessoas.png);
 	display: inline-block;
 	transform: translateY(3px);
   margin-left: 2px;
