--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .container {
   max-width: 940px;
   margin-left: auto;
@@ -55,42 +54,17 @@
   background: rgba(0, 0, 0, 0.5);
   font-weight: lighter; }
 
-.gallery-section .gallery {
+.gallery .gallery__content {
   margin-bottom: 5px;
   position: relative;
   height: 370px;
   overflow: hidden; }
-  .gallery-section .gallery.modal {
-    height: 100%; }
-    .gallery-section .gallery.modal img {
-      object-fit: contain; }
 
-.slick-arrow {
-  position: absolute;
-  top: 50%;
-  z-index: 1;
-  width: 45px;
-  height: 70px;
-  margin-top: -35px;
-  border: none;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f2eaf5;
-  font-size: 25px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  background-repeat: no-repeat;
-  background-position: center center;
-  cursor: pointer; }
-
-.slick-prev {
-  left: 0;
-  background-image: url(../images/icons/slick-prev.png); }
-
-.slick-next {
-  right: 0;
-  background-image: url(../images/icons/slick-next.png); }
-
-.gallery-section {
+.gallery {
   margin-bottom: 59px; }
+
+.gallery img {
+  object-fit: cover; }
 
 .gallery-thumbs {
   overflow: hidden;
@@ -112,27 +86,14 @@
   cursor: pointer;
   font-weight: lighter; }
 
-.gallery-section img {
-  object-fit: cover; }
-
-.fullscreen {
-  background-color: #000;
-  display: none;
+.modal {
+  background-color: rgba(0, 0, 0, 0.9);
   height: 100vh;
   position: fixed;
   width: 100%;
   z-index: 999;
   top: 0;
-  left: 0;
-  display: none; }
-  .fullscreen.open {
-    display: block; }
-
-.gallery-modal-container {
-  height: 100vh; }
-  .gallery-modal-container .slick-slider .slick-track,
-  .gallery-modal-container .slick-slider .slick-list {
-    height: 100%; }
+  left: 0; }
 
 .gallery-nav-modal {
   width: 100%;
@@ -142,7 +103,7 @@
   bottom: 0;
   height: 60px; }
 
-.modal-gallery-close {
+.modal__close {
   font-size: 12px;
   font-weight: 600;
   position: absolute;
@@ -174,68 +135,83 @@
   position: relative;
   height: 60px; }
 
-.photo-modal {
+.modal__navigator-wrapper {
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden; }
+
+.modal__navigator {
+  height: 60px;
+  text-align: center;
+  white-space: nowrap; }
+
+.modal__thumb {
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center; }
+  background-position: center center;
+  width: 90px;
+  height: 60px;
+  display: inline-block;
+  margin: 0 5px;
+  position: relative;
+  cursor: pointer; }
 
-.out-of-view {
-  opacity: .1; }
-
-/* Dots */
-.slick-slider {
-  margin-bottom: 30px; }
-
-.slick-dots {
+.modal__thumb--selected:after {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
   position: absolute;
-  bottom: 10px;
-  list-style: none;
-  display: block;
-  text-align: center;
-  padding: 0;
-  width: 100%; }
-  .slick-dots li {
-    position: relative;
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-    margin: 0 5px;
-    padding: 0;
-    cursor: pointer; }
-    .slick-dots li button {
-      border: 0;
-      background: transparent;
-      display: block;
-      height: 20px;
-      width: 20px;
-      outline: none;
-      line-height: 0px;
-      font-size: 0px;
-      color: transparent;
-      padding: 5px;
-      cursor: pointer; }
-      .slick-dots li button:hover, .slick-dots li button:focus {
-        outline: none; }
-        .slick-dots li button:hover:before, .slick-dots li button:focus:before {
-          opacity: .8; }
-      .slick-dots li button:before {
-        position: absolute;
-        top: 0;
-        left: 0;
-        content: '•';
-        width: 20px;
-        height: 20px;
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        font-size: 30px;
-        line-height: 20px;
-        text-align: center;
-        color: #ff7a01;
-        opacity: .2;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale; }
-    .slick-dots li.slick-active button:before {
-      color: #ff7a01;
-      opacity: 1; }
+  left: 0;
+  top: 0;
+  pointer-events: none; }
+
+.modal__photo-wrapper {
+  height: 100vh;
+  padding-bottom: 80px; }
+  .modal__photo-wrapper .slick-slider .slick-track,
+  .modal__photo-wrapper .slick-slider .slick-list {
+    height: 100%; }
+
+.modal__photo {
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat; }
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+  width: 45px;
+  height: 70px;
+  margin-top: -35px;
+  border: none;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f2eaf5;
+  font-size: 25px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+  outline: 0; }
+
+.arrow--prev {
+  left: 0;
+  background-image: url(../images/icons/slick-prev.png); }
+
+.arrow--next {
+  right: 0;
+  background-image: url(../images/icons/slick-next.png); }
+
+@media all and (max-width: 940px) {
+  .gallery-nav {
+    display: none; } }
 
 .options-header {
   overflow: hidden;
