--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -17,50 +17,19 @@
   font-weight: lighter;
 }
 
-.gallery-section .gallery {
+.gallery .gallery__content {
 	margin-bottom: 5px;
 	position: relative;
 	height: 370px;
 	overflow: hidden;
-
-	&.modal {
-		height: 100%;
-
-		img {
-			object-fit: contain;
-		}
-	}
 }
 
-.slick-arrow {
-	position: absolute;
-	top: 50%;
-	z-index: 1;
-	width: 45px;
-	height: 70px;
-	margin-top: -35px;
-	border: none;
-	background: rgba(0, 0, 0, .5);
-	color: #f2eaf5;
-	font-size: 25px;
-	font-family: $font-stack;
-	background-repeat: no-repeat;
-	background-position: center center;
-	cursor: pointer;
-}
-
-.slick-prev {
-	left: 0;
-	background-image: url(../images/icons/slick-prev.png);
-}
-
-.slick-next {
-	right: 0;
-	background-image: url(../images/icons/slick-next.png);
-}
-
-.gallery-section {
+.gallery {
 	margin-bottom: 59px;
+}
+
+.gallery img {
+  object-fit: cover;
 }
 
 .gallery-thumbs {
@@ -85,33 +54,14 @@
   font-weight: lighter;
 }
 
-.gallery-section img {
-    object-fit: cover;
-}
-
-.fullscreen {
-	background-color: #000;
-	display: none;
+.modal {
+	background-color: rgba(0, 0, 0, .9);
 	height: 100vh;
 	position: fixed;
 	width: 100%;
 	z-index: 999;
 	top: 0;
 	left: 0;
-	display: none;
-
-	&.open {
-		display: block;
-	}
-}
-
-.gallery-modal-container {
-	height: 100vh;
-
-	.slick-slider .slick-track,
-	.slick-slider .slick-list {
-		height: 100%;
-	}
 }
 
 .gallery-nav-modal {
@@ -123,7 +73,7 @@
 	height: 60px;
 }
 
-.modal-gallery-close {
+.modal__close {
 	font-size: 12px;
 	font-weight: 600;
 	position: absolute;
@@ -138,13 +88,6 @@
 	padding: 10px;
 	cursor: pointer;
 }
-
-$gallerylayout: (
-	columns: 10,
-	gutters: 4px/90px,
-);
-
-@include layout($gallerylayout);
 
 .gallery-thumb {
 	float: left;
@@ -168,76 +111,93 @@ $gallerylayout: (
 	height: 60px;
 }
 
-.photo-modal {
-	background-size: contain;
+.modal__navigator-wrapper {
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.modal__navigator {
+  height: 60px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.modal__thumb {
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
+  width: 90px;
+  height: 60px;
+  display: inline-block;
+  margin: 0 5px;
+  position: relative;
+  cursor: pointer;
 }
 
-.out-of-view {
-	opacity: .1;
+.modal__thumb--selected:after {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none;
 }
 
-/* Dots */
+.modal__photo-wrapper {
+  height: 100vh;
+  padding-bottom: 80px;
 
-.slick-slider {
-    margin-bottom: 30px;
+  .slick-slider .slick-track,
+  .slick-slider .slick-list {
+    height: 100%;
+  }
 }
 
-.slick-dots {
-    position: absolute;
-    bottom: 10px;
-    list-style: none;
-    display: block;
-    text-align: center;
-    padding: 0;
-    width: 100%;
-    li {
-        position: relative;
-        display: inline-block;
-        height: 20px;
-        width: 20px;
-        margin: 0 5px;
-        padding: 0;
-        cursor: pointer;
-        button {
-            border: 0;
-            background: transparent;
-            display: block;
-            height: 20px;
-            width: 20px;
-            outline: none;
-            line-height: 0px;
-            font-size: 0px;
-            color: transparent;
-            padding: 5px;
-            cursor: pointer;
-            &:hover, &:focus {
-                outline: none;
-                &:before {
-                    opacity: .8;
-                }
-            }
-            &:before {
-                position: absolute;
-                top: 0;
-                left: 0;
-                content: '•';
-                width: 20px;
-                height: 20px;
-                font-family: $font-stack;
-                font-size: 30px;
-                line-height: 20px;
-                text-align: center;
-                color: $strong-orange;
-                opacity: .2;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-            }
-        }
-        &.slick-active button:before {
-            color: $strong-orange;
-            opacity: 1;
-        }
-    }
+.modal__photo {
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+  width: 45px;
+  height: 70px;
+  margin-top: -35px;
+  border: none;
+  background: rgba(0, 0, 0, .5);
+  color: #f2eaf5;
+  font-size: 25px;
+  font-family: $font-stack;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+  outline: 0;
+}
+
+.arrow--prev {
+  left: 0;
+  background-image: url(../images/icons/slick-prev.png);
+}
+
+.arrow--next {
+  right: 0;
+  background-image: url(../images/icons/slick-next.png);
+}
+
+@media all and (max-width: 940px) {
+  .gallery-nav {
+    display: none;
+  }
 }
