--- a/app/client/sass/main.scss
+++ b/app/client/sass/main.scss
@@ -1,13 +1,11 @@
-$font-stack: 	Arial, 'Helvetica Neue', Helvetica, sans-serif;
+$font-stack: 	  Arial, 'Helvetica Neue', Helvetica, sans-serif;
 $gotham:        'Gotham', $font-stack;
 $cinza-claro: 	#666666;
 $cinza-borda: 	#e4e4e4;
 $laranja-borda: #fab23c;
 $strong-orange: #ff7a01;
-$green: 		#3bad00;
+$green: 		    #3bad00;
 
-@import "../../node_modules/susy/sass/susy";
-
-@import "page";
+@import "offer";
 @import "gallery";
 @import "options";
