--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -37,10 +37,15 @@
   margin-bottom: 7px;
   padding-left: 1px; }
 
-.offer-fig {
+.gallery {
+  margin-bottom: 59px; }
+  .gallery img {
+    object-fit: cover; }
+
+.gallery__figure {
   position: relative; }
 
-.offer-figcap {
+.gallery__caption {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -54,19 +59,13 @@
   background: rgba(0, 0, 0, 0.5);
   font-weight: lighter; }
 
-.gallery .gallery__content {
+.gallery__content {
   margin-bottom: 5px;
   position: relative;
   height: 370px;
   overflow: hidden; }
 
-.gallery {
-  margin-bottom: 59px; }
-
-.gallery img {
-  object-fit: cover; }
-
-.gallery-thumbs {
+.gallery__thumbs {
   overflow: hidden;
   position: absolute;
   top: 0; }
@@ -86,6 +85,21 @@
   cursor: pointer;
   font-weight: lighter; }
 
+.gallery__thumb {
+  float: left;
+  margin-right: 4.4px;
+  position: relative; }
+
+.gallery__thumb--last {
+  margin-right: 0;
+  position: relative; }
+
+.gallery__nav {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 60px; }
+
 .modal {
   background-color: rgba(0, 0, 0, 0.9);
   height: 100vh;
@@ -94,14 +108,6 @@
   z-index: 999;
   top: 0;
   left: 0; }
-
-.gallery-nav-modal {
-  width: 100%;
-  overflow: hidden;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 60px; }
 
 .modal__close {
   font-size: 12px;
@@ -117,23 +123,6 @@
   text-transform: uppercase;
   padding: 10px;
   cursor: pointer; }
-
-.gallery-thumb {
-  float: left;
-  margin-right: 4.4px;
-  position: relative; }
-  .gallery-thumb.active {
-    opacity: .5; }
-
-.gallery__thumb--last {
-  margin-right: 0;
-  position: relative; }
-
-.gallery-nav {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-  height: 60px; }
 
 .modal__navigator-wrapper {
   height: 80px;
@@ -160,6 +149,7 @@
   position: relative;
   cursor: pointer; }
 
+.gallery__thumb--selected:after,
 .modal__thumb--selected:after {
   content: "";
   background-color: rgba(255, 255, 255, 0.5);
@@ -171,11 +161,8 @@
   pointer-events: none; }
 
 .modal__photo-wrapper {
-  height: 100vh;
+  height: 100%;
   padding-bottom: 80px; }
-  .modal__photo-wrapper .slick-slider .slick-track,
-  .modal__photo-wrapper .slick-slider .slick-list {
-    height: 100%; }
 
 .modal__photo {
   width: 100%;
@@ -210,15 +197,15 @@
   background-image: url(../images/icons/slick-next.png); }
 
 @media all and (max-width: 940px) {
-  .gallery-nav {
+  .gallery__nav {
     display: none; } }
 
-.options-header {
+.options__header {
   overflow: hidden;
   border-bottom: 1px solid #e4e4e4;
   margin-bottom: 29px; }
 
-.options-title {
+.options__title {
   font-family: inherit;
   font-size: 22px;
   font-style: normal;
@@ -232,17 +219,17 @@
   letter-spacing: 0px;
   margin-bottom: 4px; }
 
-.options-controls {
+.options__controls {
   float: right;
   overflow: hidden; }
 
-.options-control {
+.options__control {
   float: left;
   margin-bottom: 10px; }
-  .options-control:first-child {
+  .options__control:first-child {
     margin-right: 39px; }
 
-.options-control-label {
+.options__control-label {
   font-family: inherit;
   font-size: 9px;
   line-height: 15px;
@@ -251,7 +238,7 @@
   margin-right: 8px;
   letter-spacing: 0.6px; }
 
-.options-control-select {
+.options__control-select {
   width: 180px;
   height: 30px;
   border: 1px solid #e4e4e4;
@@ -260,10 +247,11 @@
   margin: 1px 2px 2px 0;
   background-color: #fff;
   font-size: 12px; }
-  .options-control-select.diarias {
-    width: 80px; }
 
-.options {
+.options__control-select--daily {
+  width: 80px; }
+
+.options__list {
   min-height: 640px; }
 
 .option {
@@ -297,25 +285,26 @@
     -webkit-transform: translateX(0);
             transform: translateX(0); } }
 
-.option-title {
+.option__title {
   font-family: inherit;
   font-size: 16px;
   line-height: 16px;
   letter-spacing: 0.1px;
   font-weight: 600;
   margin-bottom: 17px; }
-  .option-title.saidas {
-    font-size: 14px;
-    margin-top: 1px;
-    margin-bottom: 19px; }
 
-.option-texto {
+.option__title--from {
+  font-size: 14px;
+  margin-top: 1px;
+  margin-bottom: 19px; }
+
+.option__texto {
   font-size: 14px;
   line-height: 16px;
   color: #666666;
   padding-left: 1px; }
 
-.option-value {
+.option__value {
   font-size: 15px;
   line-height: 15px;
   letter-spacing: 0.1px;
@@ -323,18 +312,19 @@
   text-align: center;
   margin-top: 24px;
   margin-bottom: 19px; }
-  .option-value .value {
-    display: block;
-    font-weight: bold;
-    color: black;
-    margin-top: 5px;
-    margin-bottom: 3px; }
-    .option-value .value span {
-      font-size: 31px;
-      line-height: 32px;
-      letter-spacing: 3px; }
 
-.option-btn {
+.option__value-strong {
+  display: block;
+  font-weight: bold;
+  color: black;
+  margin-top: 5px;
+  margin-bottom: 3px; }
+  .option__value-strong span {
+    font-size: 31px;
+    line-height: 32px;
+    letter-spacing: 3px; }
+
+.option__btn {
   width: 140px;
   height: 30px;
   margin: 0 auto;
@@ -350,20 +340,20 @@
   cursor: pointer;
   font-family: "Gotham", Arial, "Helvetica Neue", Helvetica, sans-serif; }
 
-.option-attr {
+.option__attr {
   font-family: inherit;
   font-size: 11px;
   line-height: 11px;
   padding-left: 38%; }
 
-.separador-attrs {
+.option__separator {
   height: 1px;
   border: none;
   width: 10px;
   background-color: #666666;
   margin: 17px auto 15px auto; }
 
-.numero-destaque {
+.option__destaque {
   font-family: inherit;
   font-size: 21px;
   line-height: 20px;
@@ -372,14 +362,14 @@
   padding-left: 38%;
   margin-top: 2px; }
 
-.diaria {
+.option__daily {
   width: 24px;
   height: 16px;
   background: url(../images/icons/diarias.png);
   display: inline-block;
   margin-left: -4px; }
 
-.pessoa {
+.option__person {
   width: 10px;
   height: 21px;
   background: url(../images/icons/pessoas.png);
@@ -388,66 +378,71 @@
           transform: translateY(3px);
   margin-left: 2px; }
 
-.tipo-tarifa {
+.option__tarifa {
   font-size: 12px;
   line-height: 14px;
   text-align: center;
   letter-spacing: 0.1px; }
-  .tipo-tarifa.reembolsavel {
-    color: #fab23c; }
-  .tipo-tarifa.gratis {
-    color: #3bad00; }
 
-.col1, .col2, .col3, .col4 {
+.option__tarifa--reembolsavel {
+  color: #fab23c; }
+
+.option__tarifa--gratis {
+  color: #3bad00; }
+
+.option__description,
+.option__froms,
+.option__dailys,
+.option__price {
   float: left;
   height: 195px;
   padding: 17px 0px 5px 7px; }
 
-.col1 {
+.option__description {
   width: 42.55319%;
   border-right: 1px solid #e4e4e4; }
 
-.col2 {
+.option__froms {
   padding-left: 19px;
   width: 17.02128%;
   border-right: 1px solid #e4e4e4; }
 
-.col3 {
+.option__dailys {
   width: 17.02128%;
   border-right: 1px solid #e4e4e4; }
 
-.col4 {
+.option__price {
   width: 23.40426%; }
 
 @media all and (max-width: 960px) {
-  .options-section {
+  .options {
     margin-left: 10px;
     margin-right: 10px; } }
 
 @media all and (max-width: 810px) {
-  .options-section {
+  .options {
     margin-left: 10px;
     margin-right: 10px; }
-  .col1 {
+  .option__description {
     width: 75%; }
-  .col2 {
+  .option__froms {
     width: 25%; }
-  .col3 {
+  .option__dailys {
     border-top: 1px solid #e4e4e4;
     width: 25%; }
-  .col4 {
+  .option__price {
     border-top: 1px solid #e4e4e4;
     width: 75%; } }
 
 @media all and (max-width: 420px) {
-  .col1 {
+  .option__description {
     width: 100%; }
-  .col2 {
+  .option__froms {
     border-top: 1px solid #e4e4e4;
     width: 50%; }
-  .col3 {
+  .option__dailys {
     border-top: 1px solid #e4e4e4;
     width: 50%; }
-  .col4 {
+  .option__price {
     border-top: 1px solid #e4e4e4;
     width: 100%; } }
